fix: resolve deprecation warning in Launcher for Runtime.exec
Replaced the deprecated Runtime.exec(String) with ProcessBuilder for the Windows browser fallback, satisfying Java 18+ requirements.